[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-volatility-forecasting"
version = "5.0.0"
description = "Enterprise-grade Volatility Forecasting System with GARCH models and advanced volatility prediction"
authors = [
    {name = "ML Volatility Team", email = "example@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "crypto",
    "trading",
    "volatility",
    "garch",
    "risk-management",
    "forecasting",
    "machine-learning",
    "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dependencies = [
    # GARCH model library
    "arch>=6.2.0",
    
    # Core data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "optuna>=3.4.0",
    
    # Statistical analysis  
    "statsmodels>=0.14.0",
    "pykalman>=0.9.7",  # Kalman filtering for stochastic models
    
    # API framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    
    # Async operations
    "aiohttp>=3.9.0",
    "aioredis>=2.0.0",
    "asyncpg>=0.29.0",
    
    # Data storage
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "clickhouse-driver>=0.2.6",  # For high-frequency data
    
    # Visualization
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    
    # Financial data
    "yfinance>=0.2.0",
    "ccxt>=4.1.0",  # Crypto exchanges
    "pandas-ta>=0.3.14b",  # Technical analysis
    
    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "numba>=0.58.0",  # JIT compilation for performance
    
    # Monitoring
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "pylint>=3.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0"
]
gpu = [
    "cupy-cuda12x>=12.0.0",  # GPU acceleration for NumPy
    "tensorflow-gpu>=2.13.0"
]
quant = [
    "quantlib>=1.32",  # Options pricing
    "pyfolio>=0.9.2",  # Performance analysis
    "empyrical>=0.5.5"  # Risk metrics
]

[project.urls]
Homepage = "https://github.com/KeepALifeUS/ml-volatility-forecasting"
Documentation = "https://github.com/KeepALifeUS/ml-volatility-forecasting#readme"
Repository = "https://github.com/KeepALifeUS/ml-volatility-forecasting"
"Bug Tracker" = "https://github.com/KeepALifeUS/ml-volatility-forecasting/issues"

[project.scripts]
volatility-forecast = "ml_volatility_forecasting.cli:main"
volatility-train = "ml_volatility_forecasting.training:train_model"
volatility-api = "ml_volatility_forecasting.api.server:start_server"
risk-monitor = "ml_volatility_forecasting.monitoring:risk_monitor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ml_volatility_forecasting" = ["config/*.yaml", "models/*.pkl", "data/*.csv"]

# Code quality
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint]
max-line-length = 88
disable = [
    "C0103",  # Invalid name
    "R0903",  # Too few public methods
    "W0613",  # Unused argument
    "R0902",  # Too many instance attributes (for data classes)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "arch.*",
    "numba.*",
    "ccxt.*",
    "yfinance.*",
    "quantlib.*",
    "pyfolio.*",
    "pykalman.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:arch.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "garch: marks tests for GARCH models",
    "realtime: marks tests requiring real market data",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]